--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
@@ -10,7 +10,7 @@
 
         <div class="col-md-2 text-right">
             <button class="btn btn-default" data-toggle="modal" data-target="#add-form">
-                {{ 'list.action.add' | trans({}) }}
+                <span class="fa fa-plus"></span>{{ 'list.action.add' | trans({}) }}
             </button>
         </div>
     </div>
@@ -43,8 +43,13 @@
                             </li>
 
                             <li>
-                                <a href="" title="{{ 'list.slide.body.action.delete' | trans({}) }}">
-                                    <span class="fa fa-times-circle"></span>{{ 'list.slide.body.action.delete' | trans({}) }}</a>
+                                <button class="btn btn-link" data-toggle="modal" data-target="#delete-modal-{{ slide.id }}">
+                                    <span class="fa fa-times-circle"></span>{{ 'list.slide.body.action.delete' | trans({}) }}
+                                </button>
+
+                                <div id="delete-modal-{{ slide.id }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                                    {% include "PBlondeauSlideShowBundle:SlideShow/Admin:deleteModal.html.twig" %}
+                                </div>
                             </li>
                         </ul>
                     </td>
@@ -62,6 +67,6 @@
     </div>
 
     <div id="add-form" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        {% include "PBlondeauSlideShowBundle:SlideShow/Admin:form.html.twig" with {'form': form} only %}
+        {% include "PBlondeauSlideShowBundle:SlideShow/Admin:saveForm.html.twig" with {'form': form} only %}
     </div>
 {% endblock %}
