Add UserBundle Remove User and Creation field from SlideType Fix graphique bug in Slide list in admin Add admin side menu

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -50,6 +50,12 @@
             {% endfor %}
         </div>
 
+        {% if is_granted('ROLE_ADMIN') %}
+            <aside class="admin-menu">
+                {% include "::components/_navigationAdmin.html.twig" %}
+            </aside>
+        {% endif %}
+
         <main class="container padding-y">
             {% block body %}{% endblock %}
         </main>
