--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/deleteModal.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/deleteModal.html.twig
@@ -11,8 +11,8 @@
             {{ 'form.delete.modal.content' | trans({}) | raw }}
         </div>
 
-        <div class="modal-footer text-right">
-            <button type="submit" class="btn btn-default" data-dismiss="modal">
+        <div class="submits modal-footer text-right">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
                 <span class="fa fa-times"></span>
                 {{ 'form.delete.modal.action.cancel' | trans({}) }}
             </button>
