--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/saveForm.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/saveForm.html.twig
@@ -14,8 +14,8 @@
             {{ form_rest(form) }}
         </div>
 
-        <div class="modal-footer text-right">
-            <button type="submit" class="btn btn-default" data-dismiss="modal">
+        <div class="submits modal-footer text-right">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
                 <span class="fa fa-times"></span>
                 {{ 'form.add.modal.action.cancel' | trans({}) }}
             </button>
