Start reproducing the old design for the Header and the Footer

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="wrap">
-	        <header class="container text-center">
+	        <header id="main-header" class="container text-center">
 	            <h1>
 	                <a href="{{ path('slide_show_public_display') }}" title="{{ 'header.backToHome.title' | trans({}, 'layout') }}">
 	                    {{ 'header.title' | trans({}, 'layout') }}
