--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/edit.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Slide edit</h1>
 
-    {{ form(edit_form) }}
+    {{ form(form) }}
 
         <ul class="record_actions">
     <li>
@@ -13,6 +13,5 @@
             Back to the list
         </a>
     </li>
-    <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
