Create Slide from Ajax form

--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
@@ -4,6 +4,10 @@
 <div class="modal-body">
     {{ form_errors(form) }}
 
+    {% if errors is defined %}
+        {{ errors }}
+    {% endif %}
+
     {{ form_rest(form) }}
 </div>
 
