--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
@@ -87,8 +87,10 @@
                     <h4 class="modal-title">{{ 'form.add.modal.title' | trans({}) }}</h4>
                 </div>
 
-                {% include "PBlondeauSlideShowBundle:SlideShow/Admin:_saveForm.html.twig"
-                    with {'form': form} only %}
+                <div id="save-form-container">
+                    {% include "PBlondeauSlideShowBundle:SlideShow/Admin:_saveForm.html.twig"
+                        with {'form': form} only %}
+                </div>
             </div>
         </div>
     </div>
