Update Slide using ajax

--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
@@ -14,12 +14,12 @@
 <div class="submits modal-footer text-right">
     <button type="button" class="btn btn-default" data-dismiss="modal">
         <span class="fa fa-times"></span>
-        {{ 'form.add.modal.action.cancel' | trans({}) }}
+        {{ 'form.modal.action.cancel' | trans({}) }}
     </button>
 
     <button type="submit" class="submit btn btn-primary">
         <span class="fa fa-floppy-o"></span>
-        {{ 'form.add.modal.action.save' | trans({}) }}
+        {{ 'form.modal.action.save' | trans({}) }}
     </button>
 </div>
 {{ form_end(form) }}
