--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/index.html.twig
@@ -49,7 +49,8 @@
                     <td>
                         <ul class="list-inline">
                             <li>
-                                <a href="" title="{{ 'list.slide.body.action.edit' | trans({}) }}">
+                                <a href="#" class="edit-entity" title="{{ 'list.slide.body.action.edit' | trans({}) }}"
+                                        data-action="{{ path('admin_slides_edit', {'id': slide.id}) }}">
                                     <span class="fa fa-pencil"></span>{{ 'list.slide.body.action.edit' | trans({}) }}</a>
                             </li>
 
@@ -84,7 +85,9 @@
                     <button type="button" class="close" data-dismiss="modal">
                         <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                     </button>
-                    <h4 class="modal-title">{{ 'form.add.modal.title' | trans({}) }}</h4>
+                    <h4 class="modal-title">{{ 'form.modal.add.title' | trans({}) }}</h4>
+
+                    <h4 class="modal-title hidden">{{ 'form.modal.edit.title' | trans({}) }}</h4>
                 </div>
 
                 <div id="save-form-container">
