--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -34,7 +34,7 @@
 	            </nav>
 	        </header>
 
-	        <div class="container padding-top">
+	        <div id="flash-messages" class="container padding-top">
 	            {% for type, messages in app.session.flashBag.all() %}
 	                {% for message in messages %}
 	                    <div class="alert alert-dismissable alert-{{ type }}">
