--- a/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/_saveForm.html.twig
+++ b/src/PBlondeau/Bundle/ExhibitionBundle/Resources/views/Exhibition/Admin/_saveForm.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "adminSlideShow" %}
+{% trans_default_domain "adminExhibition" %}
 
 {{ form_start(form) }}
 <div class="modal-body">
