Admin CRUD for Press Article Display of the list of Press Article in public area

--- a/app/Resources/views/components/_navigationAdmin.html.twig
+++ b/app/Resources/views/components/_navigationAdmin.html.twig
@@ -44,7 +44,7 @@
 	</li>
 
 	<li>
-		<a href="{{ path('admin_press') }}" title="{{ 'aside.link.press.label'| trans({}) }}"
+		<a href="{{ path('admin_press_articles') }}" title="{{ 'aside.link.press.label'| trans({}) }}"
 		   data-toggle="tooltip" data-placement="right" {% block currentAdminPress %}{% endblock %}>
 			<span class="fa fa-newspaper-o"></span><label>{{ 'aside.link.press.label'| trans({}) }}</label>
 		</a>
