--- a/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
@@ -1,5 +1,106 @@
-{% extends '::layout.html.twig' %}
+{% extends "::layout.html.twig" %}
+
+{% trans_default_domain "adminNews" %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/main-admin.js') }}"></script>
+{% endblock %}
 
 {% block body %}
-	NEWS
+     <div class="row">
+        <div class="col-md-10 padding-left">
+            <h4>{{ 'list.news.count' | trans({'%numberOfNews%': newsList.getTotalItemCount}) }}</h4>
+        </div>
+
+        <div class="col-md-2 text-right">
+            <button class="btn btn-default create-entity"
+                    data-action="{{ path('admin_news_create') }}"
+                    data-title="{{ 'form.create.title' | trans({})  }}">
+                <span class="fa fa-plus"></span>{{ 'list.action.add' | trans({}) }}
+            </button>
+        </div>
+    </div>
+
+    <table class="table table-striped table-hover table-sortable">
+        <thead>
+            <tr>
+                <th>{{ 'list.news.header.image' | trans({}) }}</th>
+                <th>{{ 'list.news.header.content' | trans({}) }}</th>
+	            <th>{{ 'list.news.header.position' | trans({}) }}</th>
+                <th>{{ 'list.news.header.status' | trans({}) }}</th>
+                <th>{{ 'list.news.header.creation' | trans({}) }}</th>
+                <th>{{ 'list.news.header.actions' | trans({}) }}</th>
+            </tr>
+        </thead>
+
+        <tbody data-action="{{ path('admin_news_update_positions') }}">
+            {% for news in newsList %}
+                <tr id="entity-{{ news.id }}" data-id="{{ news.id }}"
+                        class="{% if news.isStopped %}sortable-disabled{% endif %}">
+                    <td class="preview">
+                        <span class="fa fa-arrows-v margin-x {% if news.isStopped %}invisible{% endif %}"></span>
+                        <img src="{{ asset(news.webPath) }}" class="img-responsive img-thumbnail" alt="" />
+                    </td>
+                    <td class="title" width="40%">
+                        <span title="{{ news.title }}">
+                            {{ news.title|truncate(55) }}
+                        </span>
+                    </td>
+	                <td class="position">
+		                {{ news.position }}
+	                </td>
+                    <td>
+                        <span class="badge status-{{ news.status }}">
+                            {{ ('list.news.body.status.' ~ news.status) | trans({}) }}
+                        </span>
+                    </td>
+                    <td>{{ news.creation|date('d-m-Y') }}</td>
+                    <td>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#" class="edit-entity" title="{{ 'list.news.body.action.edit' | trans({}) }}"
+                                        data-action="{{ path('admin_news_edit', {'id': news.id}) }}"
+                                        data-title="{{ 'form.update.title' | trans({})  }}">
+                                    <span class="fa fa-pencil"></span>{{ 'list.news.body.action.edit' | trans({}) }}</a>
+                            </li>
+
+                            <li>
+                                <button class="btn btn-link" data-toggle="modal" data-target="#delete-modal-{{ news.id }}">
+                                    <span class="fa fa-times-circle"></span>{{ 'list.news.body.action.delete' | trans({}) }}
+                                </button>
+
+                                <div id="delete-modal-{{ news.id }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                                    {% include "PBlondeauNewsBundle:News/Admin:deleteModal.html.twig" %}
+                                </div>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6" class="">{{ 'list.news.empty' | trans({}) }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <div class="paginator">
+        {{ knp_pagination_render(newsList) }}
+    </div>
+
+    <div id="save-form" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                    </button>
+                    <h4 class="modal-title"></h4>
+                </div>
+
+                <div id="save-form-container"></div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
