--- a/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Public/index.html.twig
+++ b/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Public/index.html.twig
@@ -1,5 +1,13 @@
 {% extends '::layout.html.twig' %}
 
 {% block body %}
-	NEWS :D
+	{% for news in newsList %}
+        <article class="media margin-bottom">
+            <img class="img-thumbnail pull-left" src="{{ asset(news.webPath) }}" alt="" />
+            <div class="media-body">
+                <h4 class="media-heading">{{ news.title }}</h4>
+                <p>{{ news.content|nl2br() }}</p>
+            </div>
+        </article>
+    {% endfor %}
 {% endblock %}
