--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/views/SlideShow/Admin/_saveForm.html.twig
@@ -13,7 +13,7 @@
     </div>
 
     <div>
-        {{ form_row(form.file) }}
+        {{ form_row(form.status) }}
     </div>
 
     {{ form_rest(form) }}
