--- a/src/PBlondeau/Bundle/PressBundle/Resources/views/PressArticle/Public/index.html.twig
+++ b/src/PBlondeau/Bundle/PressBundle/Resources/views/PressArticle/Public/index.html.twig
@@ -1,9 +1,15 @@
 {% extends '::layout.html.twig' %}
 
 {% block body %}
-	{% for pressArticle in pressArticles %}
-        <div class="text-center margin-bottom">
-            <img class="img-max-width" src="{{ asset(pressArticle.webPath) }}" alt="" />
-        </div>
-    {% endfor %}
+    <section id="press">
+        {% for pressArticle in pressArticles %}
+            <div class="text-center margin-bottom">
+                <img class="img-max-width" src="{{ asset(pressArticle.webPath) }}" alt="" />
+            </div>
+        {% endfor %}
+    </section>
+
+    <div class="paginator">
+        {{ knp_pagination_render(pressArticles) }}
+    </div>
 {% endblock %}
