--- a/web/css/main.css
+++ b/web/css/main.css
@@ -236,10 +236,15 @@ main.container {
     width: 80%;
     margin: auto;
 }
-#news img {
+#news article img {
     width: 250px;
 }
 #news article .media-body {
     padding-left: 20px;
     text-align: justify;
+}
+.separator {
+    margin: 25px auto 35px auto;
+    width: 80%;
+    border: 1px dotted #EEE;
 }
