--- a/app/Resources/views/components/_javascripts.html.twig
+++ b/app/Resources/views/components/_javascripts.html.twig
@@ -3,3 +3,7 @@
 <script src="{{ asset('js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('js/chosen/chosen.jquery.min.js') }}"></script>
 <script src="{{ asset('js/main.js') }}"></script>
+
+{% if is_granted('ROLE_ADMIN') %}
+    <script src="{{ asset('js/main-admin.js') }}"></script>
+{% endif %}
