Handle CRUD for Album in admin

--- a/app/Resources/views/components/_navigationPublic.html.twig
+++ b/app/Resources/views/components/_navigationPublic.html.twig
@@ -9,7 +9,7 @@
     </li>
 
     <li>
-        <a href="{{ path('work_public_display') }}" title="" {% block currentWork %}{% endblock %}>
+        <a href="{{ path('work_albums_public_display') }}" title="" {% block currentWork %}{% endblock %}>
             {{ 'header.navigation.work.label'| trans({}) }}
         </a>
     </li>
