--- a/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/NewsBundle/Resources/views/News/Admin/index.html.twig
@@ -21,7 +21,7 @@
         <thead>
             <tr>
                 <th>{{ 'list.news.header.image' | trans({}) }}</th>
-                <th>{{ 'list.news.header.content' | trans({}) }}</th>
+                <th>{{ 'list.news.header.title' | trans({}) }}</th>
 	            <th>{{ 'list.news.header.position' | trans({}) }}</th>
                 <th>{{ 'list.news.header.status' | trans({}) }}</th>
                 <th>{{ 'list.news.header.creation' | trans({}) }}</th>
