--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/deleteModal.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/deleteModal.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "adminWork" %}
+{% trans_default_domain "adminWorkAlbum" %}
 
 <div class="modal-dialog">
     <div class="modal-content">
@@ -11,13 +11,13 @@
             {{ 'form.delete.modal.content' | trans({}) | raw }}
         </div>
 
-        <div class="modal-footer text-right">
-            <button type="submit" class="btn btn-default" data-dismiss="modal">
+        <div class="submits modal-footer text-right">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
                 <span class="fa fa-times"></span>
                 {{ 'form.delete.modal.action.cancel' | trans({}) }}
             </button>
 
-            <form action="{{ path('admin_albumss_delete', {'id': album.id}) }}" method="post" class="form-delete">
+            <form action="{{ path('admin_work_albums_delete', {'id': album.id}) }}" method="post" class="form-delete">
                 <input type="hidden" name="_method" value="delete">
                 <button type="submit" class="btn btn-primary">
                     <span class="fa fa-trash-o"></span>
