--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Admin/index.html.twig
@@ -1,34 +1,50 @@
 {% extends "::layout.html.twig" %}
 
-{% trans_default_domain "adminWork" %}
+{% trans_default_domain "adminWorkAlbum" %}
 
 {% block body %}
      <div class="row">
-        <div class="col-md-10">
-            {{ 'list.album.count' | trans({'%numberOfAlbum%': albums.getTotalItemCount}) }}
+        <div class="col-md-10 padding-left">
+            <h4>{{ 'list.album.count' | trans({'%numberOfAlbums%': albums.getTotalItemCount}) }}</h4>
         </div>
 
         <div class="col-md-2 text-right">
-            <button class="btn btn-default" data-toggle="modal" data-target="#add-form">
+            <button class="btn btn-default create-entity"
+                    data-action="{{ path('admin_work_albums_create') }}"
+                    data-title="{{ 'form.create.title' | trans({})  }}">
                 <span class="fa fa-plus"></span>{{ 'list.action.add' | trans({}) }}
             </button>
         </div>
     </div>
 
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover table-sortable">
         <thead>
             <tr>
-                <th>{{ 'list.album.header.image' | trans({}) }}</th>
+                <th>{{ 'list.album.header.cover' | trans({}) }}</th>
+                <th>{{ 'list.album.header.title' | trans({}) }}</th>
+	            <th>{{ 'list.album.header.position' | trans({}) }}</th>
                 <th>{{ 'list.album.header.status' | trans({}) }}</th>
                 <th>{{ 'list.album.header.creation' | trans({}) }}</th>
                 <th>{{ 'list.album.header.actions' | trans({}) }}</th>
             </tr>
         </thead>
 
-        <tbody>
+        <tbody data-action="{{ path('admin_work_albums_update_positions') }}">
             {% for album in albums %}
-                <tr>
-                    <td><img src="{{ album.cover }}" alt="" /></td>
+                <tr id="entity-{{ album.id }}" data-id="{{ album.id }}"
+                        class="{% if album.isStopped %}sortable-disabled{% endif %}">
+                    <td class="preview">
+                        <span class="fa fa-arrows-v margin-x {% if album.isStopped %}invisible{% endif %}"></span>
+                        <img src="{{ asset(album.webPath) }}" class="img-responsive img-thumbnail" alt="" />
+                    </td>
+                    <td class="title" width="40%">
+                        <span title="{{ album.title }}">
+                            {{ album.title|truncate(55) }}
+                        </span>
+                    </td>
+	                <td class="position">
+		                {{ album.position }}
+	                </td>
                     <td>
                         <span class="badge status-{{ album.status }}">
                             {{ ('list.album.body.status.' ~ album.status) | trans({}) }}
@@ -38,7 +54,9 @@
                     <td>
                         <ul class="list-inline">
                             <li>
-                                <a href="" title="{{ 'list.album.body.action.edit' | trans({}) }}">
+                                <a href="#" class="edit-entity" title="{{ 'list.album.body.action.edit' | trans({}) }}"
+                                        data-action="{{ path('admin_work_albums_edit', {'id': album.id}) }}"
+                                        data-title="{{ 'form.update.title' | trans({})  }}">
                                     <span class="fa fa-pencil"></span>{{ 'list.album.body.action.edit' | trans({}) }}</a>
                             </li>
 
@@ -48,7 +66,7 @@
                                 </button>
 
                                 <div id="delete-modal-{{ album.id }}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-                                    {% include "PBlondeauSlideShowBundle:Album/Admin:deleteModal.html.twig" %}
+                                    {% include "PBlondeauWorkBundle:Album/Admin:deleteModal.html.twig" %}
                                 </div>
                             </li>
                         </ul>
@@ -56,17 +74,28 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4" class="">{{ 'list.album.empty' | trans({}) }}</td>
+                    <td colspan="6" class="">{{ 'list.album.empty' | trans({}) }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <div class="navigation">
+    <div class="paginator">
         {{ knp_pagination_render(albums) }}
     </div>
 
-    <div id="add-form" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        {% include "PBlondeauSlideShowBundle:Album/Admin:saveForm.html.twig" with {'form': form} only %}
+    <div id="save-form" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                    </button>
+                    <h4 class="modal-title"></h4>
+                </div>
+
+                <div id="save-form-container"></div>
+            </div>
+        </div>
     </div>
 {% endblock %}
