--- a/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Public/index.html.twig
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/views/Album/Public/index.html.twig
@@ -1,5 +1,15 @@
 {% extends '::layout.html.twig' %}
 
 {% block body %}
-    WORK :D
+    <section id="exhibtions">
+        {% for exhibition in exhibitions %}
+            <article class="text-center margin-bottom">
+                <img class="img-max-width" src="{{ asset(exhibition.webPath) }}" alt="" />
+            </article>
+        {% endfor %}
+    </section>
+
+    <div class="paginator">
+        {{ knp_pagination_render(exhibitions) }}
+    </div>
 {% endblock %}
